tests/rosetta/out/Smalltalk/canny-edge-detector.out
/tmp/canny-edge-detector.st:11: parse error, expected ']'
