tests/rosetta/out/Smalltalk/canny-edge-detector.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| PI conv2d h w n half out y row x sum j i yy xx gradient hx hy gx gy g threshold printMatrix line main img edges |
PI := 3.141592653589793.
conv2d := [:img :k | h := (img size).
w := (img at: 0 size).
n := (k size).
half := (n / 2).
out := {}.
y := 0.
[(y < h)] whileTrue: [.
row := {}.
x := 0.
[(x < w)] whileTrue: [.
sum := 0.
j := 0.
[(j < n)] whileTrue: [.
i := 0.
[(i < n)] whileTrue: [.
yy := (((y + j)) - half).
((yy < 0)) ifTrue: [
yy := 0.
] .
((yy >= h)) ifTrue: [
yy := (h - 1).
] .
xx := (((x + i)) - half).
((xx < 0)) ifTrue: [
xx := 0.
] .
((xx >= w)) ifTrue: [
xx := (w - 1).
] .
sum := (sum + (((img at: yy at: xx) * (k at: j at: i)))).
i := (i + 1).
].
.
j := (j + 1).
].
.
row := row copyWith: sum.
x := (x + 1).
].
.
out := out copyWith: row.
y := (y + 1).
].
.
out. ].
gradient := [:img | hx := {{-1. 0. 1}. {-2. 0. 2}. {-1. 0. 1}}.
hy := {{1. 2. 1}. {0. 0. 0}. {-1. -2. -1}}.
gx := conv2d value: img value: hx.
gy := conv2d value: img value: hy.
h := (img size).
w := (img at: 0 size).
out := {}.
y := 0.
[(y < h)] whileTrue: [.
row := {}.
x := 0.
[(x < w)] whileTrue: [.
g := ((((gx at: y at: x) * (gx at: y at: x))) + (((gy at: y at: x) * (gy at: y at: x)))).
row := row copyWith: g.
x := (x + 1).
].
.
out := out copyWith: row.
y := (y + 1).
].
.
out. ].
threshold := [:g :t | h := (g size).
w := (g at: 0 size).
out := {}.
y := 0.
[(y < h)] whileTrue: [.
row := {}.
x := 0.
[(x < w)] whileTrue: [.
(((g at: y at: x) >= t)) ifTrue: [
row := row copyWith: 1.
] ifFalse: [
row := row copyWith: 0.
].
x := (x + 1).
].
.
out := out copyWith: row.
y := (y + 1).
].
.
out. ].
printMatrix := [:m | y := 0.
[(y < ((m size)))] whileTrue: [.
line := ''.
x := 0.
[(x < ((m at: 0 size)))] whileTrue: [.
line := (line + ((m at: y at: x asString))).
((x < ((((m at: 0 size)) - 1)))) ifTrue: [
line := (line + (' ')).
] .
x := (x + 1).
].
.
Transcript show: (line) printString; cr.
y := (y + 1).
].
. ].
main := [ img := {{0. 0. 0. 0. 0}. {0. 255. 255. 255. 0}. {0. 255. 255. 255. 0}. {0. 255. 255. 255. 0}. {0. 0. 0. 0. 0}}.
g := gradient value: img.
edges := threshold value: g value: (1020 * 1020).
printMatrix value: edges. ].
main value.
